# RISC-V-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
architecture/: cpu.c  tools.c
architecture/alu/: alu.c  aluControl.c
architecture/memory/: instructionMemory.c  registerMemory.c
example/: riscv32i_asm_example.s
include/: alu.h  aluControl.h  cpu.h  instructionMemory.h  registerMemory.h  tools.h  tui.h
src/: main.c  riscv32i_asm_example.s
src/alu/: alu.c  aluControl.c  alu_control.c
src/alu/include/: alu.h  alu_control.h
src/app/: main.c
src/architecture/: assemblyData.c  cpu.c  tools.c  tui.c
src/architecture/alu/: alu.c  aluControl.c
src/architecture/controlUnit/: controlUnit.c
src/architecture/memory/: instructionMemory.c  registerMemory.c
src/asm-handler/: args_handler.c  asm_file_parser.c  assembly_data.c  elf.c  riscv32i_bin_example.elf
src/asm-handler/include/: args_handler.h  asm_file_parser.h  assembly_data.h  elf.h
src/cli-handler/: args_handler.c  asm_file_parser.c  asm_file_parser.h
src/control-unit/: control_unit.c
src/control-unit/include/: control_unit.h
src/cpu/: cpu.c  decode.c  execute.c  fetch.c
src/cpu/include/: cpu.h  decode.h  execute.h  fetch.h
src/frontend/: windows_management.c
src/frontend/cpu-interface/: tui_cpu.c
src/frontend/include/: tui_cpu.h  tui_main.h  windows_management.h
src/frontend/main-interface/: tui_main.c
src/include/: alu.h  aluControl.h  args_handler.h  assemblyData.h  controlUnit.h  cpu.h  instructionMemory.h  registerMemory.h  tools.h  tui.h
src/include/tui/cpu/: tuiCpu.h
src/include/tui/main/: tuiMain.h  windows.h
src/include/tui/ncurses/: tuiNcurses.h
src/include/winManagement/: windowsManagement.h
src/memory/: ram.c  register_memory.c
src/memory/include/: ram.h
src/ncurses-handler/: tui_ncurses.c
src/ncurses-handler/include/: tui_ncurses.h
src/terminalInterface/: tui.c
src/tui/cpu/: tuiCpu.c
src/tui/main/: tuiMain.c
src/tui/ncurses/: tuiNcurses.c
src/utils/: tools.c
src/utils/include/: tools.h
